--- a/app_doctor/static/index.html
+++ b/app_doctor/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="static/build/styles.css">
+        <link rel="stylesheet" href="static/styles.css">
         <!--
             Notice the use of %PUBLIC_URL% in the tag above.
             It will be replaced with the URL of the `public` folder during the build.
@@ -27,6 +27,6 @@
             To begin the development, run `npm start`.
             To create a production bundle, use `npm run build`.
         -->
-        <script src="static/build/bundle.js"></script>
+        <script src="static/bundle.js"></script>
     </body>
 </html>
